--- a/index.html
+++ b/index.html
@@ -8,38 +8,35 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <table>
-        <tbody>
-            <tr>
-                <td class="menu_topo">
-                    <nav>
-                        <ul>
-                            <li><a href="apresentacao.html" target="_self">APRESENTAÇÃO</a></li>
-                            <li><a href="experiencia.html" target="_self">EXPERIÊNCIA</a></li>
-                            <li><a href="formacao.html" target="_self">FORMAÇÃO</a></li>
-                            <li><a href="contatos.html" target="_self">CONTATOS</a></li>
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-            <table>
-                <tbody class="principal">
-                    <tr>
-                        <td class="menu_redes">
-                            <div class="icon_redes"><a href="https://www.linkedin.com/in/leopoldo-barbato" target="_blank"><img src="img/linkedin_001.png" alt=""></div>
-                            <div class="icon_redes"><a href="https://www.facebook.com/leopoldo.barbato.9" target="_blank"><img src="img/face_001.png" alt=""></a></div>
-                            <div class="icon_redes"><a href="https://www.instagram.com/lbarbatto" target="_blank"><img src="img/insta_001.png" alt=""></a></div>
-                        </td>
-                        <td class="capa">
-                            <div><img id="idcapa" src="img/lb_001.png" alt=""></div>
-                        </td>
-                        <td>
-                            <div><img id="iddestaque" src="img/lb_name_001.png" alt=""></div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>            
-        </tbody>
-    </table>    
+    <div>        
+        <section class="grid principal">
+            <div class="item logo">
+                <a href="index.html" target="_self"><img id="logo" src="img/exp_001.png" alt="" srcset=""></a>
+            </div>
+            <div class="item nav">
+                <ul>
+                    <li><a href="apresentacao.html">apresentação</a></li>
+                    <li><a href="experiencia.html">experiência</a></li>
+                    <li><a href="formacao.html">formação</a></li>
+                    <li><a href="contato.html">contato</a></li>
+                </ul>
+            </div>
+            <div class="item content">
+                <div class="capa">
+                    <div>                        
+                        <img id="fotocapa" src="img/lb_001.png" alt="" srcset="">
+                    </div>
+                    <div>
+                        <img id="nomecapa" src="img/lb_name_001.png" alt="" srcset="">                    
+                    </div>
+                </div>                
+            </div>
+            <div class="item sidenav">
+                    <div><a href="https://www.linkedin.com/in/leopoldo-barbato" target="_blank"><img class="iconredes" src="img/linkedin_001.png" alt=""></div>
+                    <div><a href="https://www.facebook.com/leopoldo.barbato.9" target="_blank"><img class="iconredes" src="img/face_001.png" alt=""></a></div>
+                    <div><a href="https://www.instagram.com/lbarbatto" target="_blank"><img class="iconredes" src="img/insta_001.png" alt=""></a></div>
+            </div>
+        </section>
+    </div>    
 </body>
 </html>
