novo padrão com reponsividade

--- a/apresenta.html
+++ b/apresenta.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-  
     
     <title>Document</title>
 </head>
 <body class="container">
-    <header>Header</header>
+    <header>
+        Header
+    </header>
     <nav>
         <a href="index.html" target="_self"><img id="logo" src="img/exp_001.png" alt="" srcset=""></a>
         <ul>
@@ -21,19 +22,19 @@
             <a href="http://" target="_self" rel="noopener noreferrer"><li>contato</li></a>
         </ul>
     </nav>
-    <div class="capa">
-        <aside>
-			<a href="https://www.linkedin.com/in/leopoldo-barbato" target="_blank"><img class="iconredes" src="img/linkedin_001.png" alt=""></a>
-            <a href="https://www.facebook.com/leopoldo.barbato.9" target="_blank"><img class="iconredes" src="img/face_001.png" alt=""></a>
-            <a href="https://www.instagram.com/lbarbatto" target="_blank"><img class="iconredes" src="img/insta_001.png" alt=""></a>
-		</aside>
-        <main>
-            <h1>Principal</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, autem earum? Adipisci, placeat recusandae quos ducimus tempore exercitationem vel enim ex minus obcaecati! Cum nisi nulla dolorem reiciendis, corrupti nam.</p>
-        </main>            
+    <div class="apresenta">
+        <div class="side_left">
+            <img src="img/lb_002.png" alt="">
+        </div>
+        <h1>Apresentação</h1>
+        <p>Eu sou um cara bem legal. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore totam architecto iure fuga officiis voluptas fugit esse voluptates nemo vero earum numquam pariatur, unde exercitationem asperiores et molestiae. Iste. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, labore nesciunt perspiciatis odio cum dolor inventore fugit enim sed modi dolorem illo ut odit velit ipsum, repudiandae aperiam culpa omnis!</p>
+        <div class="side_right">
+            <img src="img/marc_bott.png" alt="">
+        </div>
     </div>
     <footer>
         <a href="mailto:leopoldo.barbato@gmail.com">Mande um email</a>
-    </footer>        
+    </footer>
+    
 </body>
 </html>
