--- a/experiencia.html
+++ b/experiencia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leopoldo Barbato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div>        
@@ -68,33 +68,33 @@
                           <h2>
                             Gestão de Projetos​
                           </h2>
-                          <h2>
+                          <p>
                             Elaboração, planejamento e execução de​ projetos para eventos coorporativos e públicos de pequeno a grande porte desde 2004.
-                          </h2>
+                          </p>
                         </div>
                         <div class="carousel-item">
                           <h2>
                             Operação Técnica​​
                           </h2>
-                          <h2>
+                          <p>
                             Orçamento, montagem e operação de equipamentos audiovisuais (iluminação, sonorização, projeção) em espetáculos cênicos e eventos de pequeno e médio porte desde 1999.​
-                          </h2>
+                          </p>
                         </div>
                         <div class="carousel-item">
                           <h2>
                             Iluminação Cênica​
                           </h2>
-                          <h2>
+                          <p>
                             Criação e implementação de projetos para iluminação cênica em produtos e eventos artísticos desde 1998​.
-                          </h2>
+                          </p>
                         </div>
                         <div class="carousel-item">
                           <h2>
                             Game Dev
                           </h2>
-                          <h2>
-                            Elaboração e execução de​ projetos para eventos coorporativos e públicos de pequeno a grande porte desde 2004.
-                          </h2>
+                          <p>
+							Elaboração e execução de​ projetos para eventos coorporativos e públicos de pequeno a grande porte desde 2004.
+						  </p>
                         </div>
                       </div>
                     </div>
